add fixed button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
   </div>
   <div id="terzo">
     <img src="img/03.png" alt="immagine" class="div-img">
-    <h1 class="div-title">Il nostro modello di punta</h1>
+    <h1 id="g-text" class="div-title">Il nostro modello di punta</h1>
+  </div>
+  <div class="buttons">
+    <a href="#primo"><button>1</button></a>
+    <a href="#secondo"><button>2</button></a>
+    <a href="#terzo"><button>3</button></a>
   </div>
 </body>
 
