fix elemento centrato

--- a/index.html
+++ b/index.html
@@ -10,18 +10,28 @@
 </head>
 
 <body>
+
   <div id="primo">
-    <img src="img/01.png" alt="immagine" class="div-img">
-    <h1 class="div-title">Il nostro modello di punta</h1>
+    <div class="element">
+      <img src="img/01.png" alt="immagine" class="div-img">
+      <h1 class="div-title">Il nostro modello di punta</h1>
+    </div>
   </div>
+
   <div id="secondo">
-    <img src="img/02.png" alt="immagine" class="div-img">
-    <h1 class="div-title">Il nostro modello di punta</h1>
+    <div class="element">
+      <img src="img/02.png" alt="immagine" class="div-img">
+      <h1 class="div-title">Il nostro modello di punta</h1>
+    </div>
   </div>
+
   <div id="terzo">
-    <img src="img/03.png" alt="immagine" class="div-img">
-    <h1 id="g-text" class="div-title">Il nostro modello di punta</h1>
+    <div class="element">
+      <img src="img/03.png" alt="immagine" class="div-img">
+      <h1 class="div-title" id="g-text">Il nostro modello di punta</h1>
+    </div>
   </div>
+
   <div class="buttons">
     <a href="#primo"><button>1</button></a>
     <a href="#secondo"><button>2</button></a>
